Further refactorings and fixes